Fixed responsivity on mobile

--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,4 @@
 header {
-    height: 120px;
     padding: 0 5%;
     display: flex;
     /*top: 0;*/
@@ -11,9 +10,17 @@ header {
 header .logo-container {
     display: flex;
     align-items: center;
+    padding: 30px 0;
 
     transition: all 0.1s ease;
     user-select: none;
+}
+
+.hamburger {
+    display: none;
+    align-items: center;
+    font-size: 60px;
+    padding-bottom: 10px;
 }
 
 header .logo-container:hover {
@@ -66,7 +73,7 @@ header .logo-shorttitle span {
 header .menu {
     list-style: none;
     height: 100%;
-    padding-left: 10px;
+    padding: 0;
 
     display: flex;
     align-items: center;
@@ -155,8 +162,30 @@ header .menu li:hover .sub-menu {
     }
 }
 
-@media(max-width: 768px) {
+@media(max-width: 668px) {
+    header {
+        flex-wrap: wrap;
+        justify-content: center;
+        padding: 20px 5%;
+    }
+}
+
+@media(max-width: 668px) and (min-width: 440px){
+    header .logo-title {
+        display: block;
+    }
+
+    header .logo-subtitle {
+        display: block;
+    }
+
     header .logo-shorttitle {
-        font-size: 20px;
+        display: none;
+    }
+}
+
+@media(max-width: 440px) {
+    header .menu > li:first-child {
+        display: none;
     }
 }
